// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopNav TopNavBrand renders with custom paddingY 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(0,0%,0%,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-left: 20px;
  width: 240px;
}

.c2.c2.c2.c2.c2 {
  width: 100%;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c1.c1.c1.c1.c1 {
    width: 264px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="top-nav"
  >
    <div
      class="c1"
      data-klear360-component="top-nav-brand"
    >
      <div
        class="c2"
        data-klear360-component="base-box"
      >
        <span>
          Brand
        </span>
      </div>
    </div>
    <div
      class="c3"
      data-klear360-component="top-nav-content"
    />
  </div>
</div>
`;

exports[`TopNav explicit backgroundColor prop overrides variant 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(229,84%,5%,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="top-nav"
  >
    <div
      class="c1"
      data-klear360-component="top-nav-content"
    />
  </div>
</div>
`;

exports[`TopNav it shpuld support adding test Id 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(229,84%,5%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-left: 20px;
  width: 240px;
}

.c3.c3.c3.c3.c3 {
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  padding: 8px;
  padding-right: 4px;
  margin-top: 2px;
  gap: 8px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19.c19.c19.c19.c19 {
  background-color: hsla(229,84%,5%,1);
}

.c21.c21.c21.c21.c21 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c11.c11.c11.c11.c11 {
  pointer-events: none;
  position: absolute;
  bottom: 0;
  left: 0;
  will-change: transform,width,opacity;
}

.c12.c12.c12.c12.c12 {
  position: relative;
  width: 100%;
  height: 0.5px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c24.c24.c24.c24.c24 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 12px;
  border: none;
  background: none;
  -webkit-transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
  transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:focus-visible {
  outline: 4px solid hsla(198,100%,18%,0.32);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:active {
  opacity: 1;
}

.c10.c10.c10.c10.c10::after {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 1;
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
  z-index: 1;
  cursor: pointer;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(222,47%,11%,1);
}

.c22.c22.c22.c22.c22 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(215,25%,27%,0.12);
}

.c22.c22.c22.c22.c22 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c14.c14.c14.c14.c14 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(229,84%,5%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(222,47%,11%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: none;
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c14.c14.c14.c14.c14:hover {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:active {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:focus-visible {
  background-color: hsla(229,84%,5%,1);
  outline: 1px solid hsla(198,100%,18%,0.32);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(198,100%,18%,0.32),inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
}

.c14.c14.c14.c14.c14 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15.c15.c15.c15.c15 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c17.c17.c17.c17.c17 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-klear360-component="top-nav"
      data-testid="demo"
    >
      <div
        class="c2"
        data-klear360-component="top-nav-brand"
      >
        <div
          class="c3"
          data-klear360-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <rect
                fill="#003F5B"
                height="20"
                rx="5"
                width="20"
                x="0"
                y="2"
              />
              <path
                d="M5.6 6.8H8V11.6L12.4 6.8H15.5L10.6 12L15.8 17.2H12.7L8 12.4V17.2H5.6V6.8Z"
                fill="#FFFFFF"
              />
              <text
                fill="#192839"
                font-family="Inter, Roboto, sans-serif"
                font-size="17"
                font-weight="600"
                letter-spacing="-0.3"
                x="27"
                y="17"
              >
                Klear
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-klear360-component="top-nav-content"
      >
        <nav
          class="c5"
          data-klear360-component="tab-nav"
        >
          <div
            class="c6"
            data-klear360-component="base-box"
          >
            <div
              class="c7"
              data-klear360-component="base-box"
            >
              <div
                class="c8"
                data-klear360-component="tab-nav-items"
              >
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Home"
                    data-klear360-component="tab-nav-item-link"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payroll"
                    data-klear360-component="tab-nav-item-link"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payments"
                    data-klear360-component="tab-nav-item-link"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Magic Checkout"
                    data-klear360-component="tab-nav-item-link"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
              </div>
              <div
                class=" c9"
                data-active="false"
                data-glow-color="hsla(198, 100%, 18%, 1)"
                data-klear360-component="tab-nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c10"
                  data-klear360-component="tab-nav-item-link"
                  href="#"
                  id=":rn:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class=""
                    data-klear360-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-klear360-component="svg-path"
                      fill="hsla(0, 0%, 100%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
              <div
                class="c11"
                data-klear360-component="tab-nav-indicator"
                style="transition-property: transform, width, opacity; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); transition-duration: 0ms; opacity: 0;"
              >
                <div
                  class=" c12"
                  data-klear360-component="base-box"
                />
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c13"
        data-klear360-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c19 c20"
          data-klear360-component="avatar"
        >
          <div
            class="c21"
            data-klear360-component="base-box"
          >
            <div
              class="c22"
              color="neutral"
            >
              <div
                class="c23"
                data-klear360-component="base-box"
              >
                <p
                  class="c24"
                  data-klear360-component="text"
                  letter-spacing="50"
                >
                  MC
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopNav renders with variant="neutral" (default) applying static black background 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(0,0%,0%,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="top-nav"
  >
    <div
      class="c1"
      data-klear360-component="top-nav-content"
    />
  </div>
</div>
`;

exports[`TopNav renders with variant="primary" applying primary background color 1`] = `
.c0.c0.c0.c0.c0 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(198,100%,18%,1);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (min-width:768px) {
  .c0.c0.c0.c0.c0 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="top-nav"
  >
    <div
      class="c1"
      data-klear360-component="top-nav-content"
    />
  </div>
</div>
`;

exports[`TopNav should render 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(229,84%,5%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-left: 20px;
  width: 240px;
}

.c3.c3.c3.c3.c3 {
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  padding: 8px;
  padding-right: 4px;
  margin-top: 2px;
  gap: 8px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19.c19.c19.c19.c19 {
  background-color: hsla(229,84%,5%,1);
}

.c21.c21.c21.c21.c21 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c11.c11.c11.c11.c11 {
  pointer-events: none;
  position: absolute;
  bottom: 0;
  left: 0;
  will-change: transform,width,opacity;
}

.c12.c12.c12.c12.c12 {
  position: relative;
  width: 100%;
  height: 0.5px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c24.c24.c24.c24.c24 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 12px;
  border: none;
  background: none;
  -webkit-transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
  transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:focus-visible {
  outline: 4px solid hsla(198,100%,18%,0.32);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:active {
  opacity: 1;
}

.c10.c10.c10.c10.c10::after {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 1;
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
  z-index: 1;
  cursor: pointer;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(222,47%,11%,1);
}

.c22.c22.c22.c22.c22 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(215,25%,27%,0.12);
}

.c22.c22.c22.c22.c22 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c14.c14.c14.c14.c14 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(229,84%,5%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(222,47%,11%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: none;
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c14.c14.c14.c14.c14:hover {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:active {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:focus-visible {
  background-color: hsla(229,84%,5%,1);
  outline: 1px solid hsla(198,100%,18%,0.32);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(198,100%,18%,0.32),inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
}

.c14.c14.c14.c14.c14 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15.c15.c15.c15.c15 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c17.c17.c17.c17.c17 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-klear360-component="top-nav"
      data-testid="demo"
    >
      <div
        class="c2"
        data-klear360-component="top-nav-brand"
      >
        <div
          class="c3"
          data-klear360-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <rect
                fill="#003F5B"
                height="20"
                rx="5"
                width="20"
                x="0"
                y="2"
              />
              <path
                d="M5.6 6.8H8V11.6L12.4 6.8H15.5L10.6 12L15.8 17.2H12.7L8 12.4V17.2H5.6V6.8Z"
                fill="#FFFFFF"
              />
              <text
                fill="#192839"
                font-family="Inter, Roboto, sans-serif"
                font-size="17"
                font-weight="600"
                letter-spacing="-0.3"
                x="27"
                y="17"
              >
                Klear
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-klear360-component="top-nav-content"
      >
        <nav
          class="c5"
          data-klear360-component="tab-nav"
        >
          <div
            class="c6"
            data-klear360-component="base-box"
          >
            <div
              class="c7"
              data-klear360-component="base-box"
            >
              <div
                class="c8"
                data-klear360-component="tab-nav-items"
              >
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Home"
                    data-klear360-component="tab-nav-item-link"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payroll"
                    data-klear360-component="tab-nav-item-link"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payments"
                    data-klear360-component="tab-nav-item-link"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Magic Checkout"
                    data-klear360-component="tab-nav-item-link"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
              </div>
              <div
                class=" c9"
                data-active="false"
                data-glow-color="hsla(198, 100%, 18%, 1)"
                data-klear360-component="tab-nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c10"
                  data-klear360-component="tab-nav-item-link"
                  href="#"
                  id=":r2:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class=""
                    data-klear360-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-klear360-component="svg-path"
                      fill="hsla(0, 0%, 100%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
              <div
                class="c11"
                data-klear360-component="tab-nav-indicator"
                style="transition-property: transform, width, opacity; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); transition-duration: 0ms; opacity: 0;"
              >
                <div
                  class=" c12"
                  data-klear360-component="base-box"
                />
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c13"
        data-klear360-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c19 c20"
          data-klear360-component="avatar"
        >
          <div
            class="c21"
            data-klear360-component="base-box"
          >
            <div
              class="c22"
              color="neutral"
            >
              <div
                class="c23"
                data-klear360-component="base-box"
              >
                <p
                  class="c24"
                  data-klear360-component="text"
                  letter-spacing="50"
                >
                  MC
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopNav should support data analytics attributes 1`] = `
.c0.c0.c0.c0.c0 {
  height: 100vh;
  background-color: hsla(0,0%,100%,1);
}

.c1.c1.c1.c1.c1 {
  display: grid;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: -webkit-sticky;
  position: sticky;
  z-index: 100;
  grid-template-columns: auto minmax(0,1fr) auto;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 12px;
  padding-left: 12px;
  height: 56px;
  width: 100%;
  top: 0px;
  background-color: hsla(229,84%,5%,1);
}

.c2.c2.c2.c2.c2 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-left: 20px;
  width: 240px;
}

.c3.c3.c3.c3.c3 {
  width: 100%;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 100%;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
  gap: 0px;
  left: -1px;
}

.c13.c13.c13.c13.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  padding: 8px;
  padding-right: 4px;
  margin-top: 2px;
  gap: 8px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19.c19.c19.c19.c19 {
  background-color: hsla(229,84%,5%,1);
}

.c21.c21.c21.c21.c21 {
  position: relative;
  height: 100%;
  width: 100%;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
  height: 100%;
}

.c11.c11.c11.c11.c11 {
  pointer-events: none;
  position: absolute;
  bottom: 0;
  left: 0;
  will-change: transform,width,opacity;
}

.c12.c12.c12.c12.c12 {
  position: relative;
  width: 100%;
  height: 0.5px;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.c24.c24.c24.c24.c24 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c10.c10.c10.c10.c10 {
  color: hsla(0,0%,100%,0.88);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  opacity: 0.8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 12px;
  border: none;
  background: none;
  -webkit-transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
  transition: opacity 280ms cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:focus-visible {
  outline: 4px solid hsla(198,100%,18%,0.32);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
  opacity: 1;
  color: hsla(0,0%,100%,1);
}

.c10.c10.c10.c10.c10:active {
  opacity: 1;
}

.c10.c10.c10.c10.c10::after {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 1;
}

.c9.c9.c9.c9.c9 {
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  padding: 4px 2px;
  background-color: transparent;
  border-color: transparent;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  -webkit-transition: 280ms cubic-bezier(0.3,0,0.2,1);
  transition: 280ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-property: background;
  transition-property: background;
  z-index: 1;
  cursor: pointer;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 36px;
  height: 36px;
  border-radius: 9999px;
  outline: 0.5px solid hsla(222,47%,11%,1);
}

.c22.c22.c22.c22.c22 {
  display: block;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  min-height: 36px;
  height: 36px;
  width: 36px;
  border: none;
  border-radius: 9999px;
  background-color: hsla(215,25%,27%,0.12);
}

.c22.c22.c22.c22.c22 img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c14.c14.c14.c14.c14 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(229,84%,5%,1);
  border: none;
  border-radius: 8px;
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(222,47%,11%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-image: none;
  -webkit-transition-property: background-color,background-image,box-shadow;
  transition-property: background-color,background-image,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c14.c14.c14.c14.c14:hover {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:active {
  background-color: hsla(229,84%,5%,1);
  box-shadow: inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
  background-image: none;
}

.c14.c14.c14.c14.c14:focus-visible {
  background-color: hsla(229,84%,5%,1);
  outline: 1px solid hsla(198,100%,18%,0.32);
  background-image: none;
  box-shadow: 0px 0px 0px 4px hsla(198,100%,18%,0.32),inset 0 -1px 0.5px 0px hsla(0,0%,0%,0.18),inset 0 0px 0px 1px hsla(217,33%,17%,1),inset 0 -1.5px 0px 0px hsla(222,47%,11%,1);
}

.c14.c14.c14.c14.c14 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15.c15.c15.c15.c15 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c17.c17.c17.c17.c17 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c1.c1.c1.c1.c1 {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-right: 8px;
    padding-left: 8px;
  }
}

@media screen and (min-width:1200px) {
  .c2.c2.c2.c2.c2 {
    width: 264px;
  }
}

<div>
  <div
    class="c0"
    data-klear360-component="box"
  >
    <div
      class="c1"
      data-analytics-topnav="demo"
      data-klear360-component="top-nav"
      data-testid="demo"
    >
      <div
        class="c2"
        data-klear360-component="top-nav-brand"
      >
        <div
          class="c3"
          data-klear360-component="base-box"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 116 24"
            width="116"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="logo"
            >
              <rect
                fill="#003F5B"
                height="20"
                rx="5"
                width="20"
                x="0"
                y="2"
              />
              <path
                d="M5.6 6.8H8V11.6L12.4 6.8H15.5L10.6 12L15.8 17.2H12.7L8 12.4V17.2H5.6V6.8Z"
                fill="#FFFFFF"
              />
              <text
                fill="#192839"
                font-family="Inter, Roboto, sans-serif"
                font-size="17"
                font-weight="600"
                letter-spacing="-0.3"
                x="27"
                y="17"
              >
                Klear
              </text>
            </g>
          </svg>
        </div>
      </div>
      <div
        class="c4"
        data-klear360-component="top-nav-content"
      >
        <nav
          class="c5"
          data-klear360-component="tab-nav"
        >
          <div
            class="c6"
            data-klear360-component="base-box"
          >
            <div
              class="c7"
              data-klear360-component="base-box"
            >
              <div
                class="c8"
                data-klear360-component="tab-nav-items"
              >
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Home"
                    data-klear360-component="tab-nav-item-link"
                    href="/home"
                    to="/home"
                  >
                    Home
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payroll"
                    data-klear360-component="tab-nav-item-link"
                    href="/payroll"
                    to="/payroll"
                  >
                    Payroll
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Payments"
                    data-klear360-component="tab-nav-item-link"
                    href="/payments"
                    to="/payments"
                  >
                    Payments
                  </a>
                </div>
                <div
                  class=" c9"
                  data-active="false"
                  data-glow-color="hsla(198, 100%, 18%, 1)"
                  data-klear360-component="tab-nav-item"
                >
                  <a
                    class="c10"
                    data-analytics-tabnavitem="Magic Checkout"
                    data-klear360-component="tab-nav-item-link"
                    href="/magic-checkout"
                    to="/magic-checkout"
                  >
                    Magic Checkout
                  </a>
                </div>
              </div>
              <div
                class=" c9"
                data-active="false"
                data-glow-color="hsla(198, 100%, 18%, 1)"
                data-klear360-component="tab-nav-item"
              >
                <a
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="c10"
                  data-klear360-component="tab-nav-item-link"
                  href="#"
                  id=":rg:"
                  to="#"
                >
                  More
                  <svg
                    aria-hidden="true"
                    class=""
                    data-klear360-component="icon"
                    fill="none"
                    height="16px"
                    viewBox="0 0 24 24"
                    width="16px"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                      data-klear360-component="svg-path"
                      fill="hsla(0, 0%, 100%, 1)"
                      fill-rule="evenodd"
                    />
                  </svg>
                </a>
              </div>
              <div
                class="c11"
                data-klear360-component="tab-nav-indicator"
                style="transition-property: transform, width, opacity; transition-timing-function: cubic-bezier(0.3, 0, 0.2, 1); transition-duration: 0ms; opacity: 0;"
              >
                <div
                  class=" c12"
                  data-klear360-component="base-box"
                />
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="c13"
        data-klear360-component="top-nav-actions"
      >
        <button
          aria-label="View Ecosystem Health"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 1C9.43043 1 9.81257 1.27543 9.94868 1.68377L15 16.8377L17.0513 10.6838C17.1874 10.2754 17.5696 10 18 10H22C22.5523 10 23 10.4477 23 11C23 11.5523 22.5523 12 22 12H18.7208L15.9487 20.3162C15.8126 20.7246 15.4304 21 15 21C14.5696 21 14.1874 20.7246 14.0513 20.3162L9 5.16228L6.94868 11.3162C6.81257 11.7246 6.43043 12 6 12H2C1.44772 12 1 11.5523 1 11C1 10.4477 1.44772 10 2 10H5.27924L8.05132 1.68377C8.18743 1.27543 8.56957 1 9 1Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View Announcements"
          class="c14"
          data-klear360-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c15"
            data-klear360-component="base-box"
          >
            <div
              class="c16 c17"
              data-klear360-component="base-box"
            >
              <div
                class="c18"
                data-klear360-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-klear360-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.7743 0.363035C14.0383 0.159916 14.3547 0.0363566 14.6865 0.00687107C15.0183 -0.0226146 15.3516 0.0431988 15.6473 0.196579C15.9429 0.34996 16.1887 0.584536 16.3557 0.872751L23.8564 13.8644C24.023 14.1531 24.1038 14.4835 24.0891 14.8165C24.0744 15.1494 23.9649 15.4712 23.7736 15.7441C23.5822 16.017 23.3169 16.2295 23.0089 16.3567C22.7012 16.4838 22.3638 16.5205 22.0361 16.4625C19.0399 15.9345 16.4708 16.2347 14.6537 16.6655C13.8958 16.8451 13.2709 17.0471 12.8032 17.2197L14.1451 19.5439C14.2889 19.7933 14.3692 20.0747 14.3784 20.3624C14.3877 20.6501 14.3258 20.9356 14.1983 21.1936L13.6487 22.3047C13.5244 22.556 13.3413 22.7741 13.1153 22.94C12.8891 23.1059 12.6263 23.2151 12.3492 23.2582C12.072 23.3014 11.7885 23.2773 11.5226 23.1879C11.2595 23.0995 11.0212 22.9498 10.8274 22.7513L7.91081 19.8194C6.99128 20.1626 5.98112 20.2147 5.02062 19.9574C3.80377 19.6313 2.76628 18.8352 2.13639 17.7442C1.5065 16.6532 1.33581 15.3567 1.66186 14.1398C1.98792 12.923 2.78401 11.8855 3.87501 11.2556L7.09987 9.39373L7.11694 9.38248C7.14203 9.36576 7.18224 9.33849 7.23602 9.30055C7.34361 9.22464 7.50532 9.10616 7.70879 8.94409C8.11602 8.61974 8.6888 8.12217 9.32936 7.44338C10.6109 6.0853 12.1554 4.01088 13.1965 1.15285C13.31 0.839989 13.5105 0.566004 13.7743 0.363035ZM7.61439 17.7569C7.62235 17.7522 7.63037 17.7475 7.63843 17.7431L10.0066 16.3758L7.25658 11.6127L4.87501 12.9877C4.24338 13.3523 3.78249 13.953 3.59372 14.6575C3.40495 15.362 3.50377 16.1126 3.86844 16.7442C4.23312 17.3759 4.83377 17.8368 5.53826 18.0255C6.23881 18.2132 6.98498 18.1166 7.61439 17.7569ZM8.93679 10.5229C8.94278 10.5181 8.9488 10.5133 8.95484 10.5085C9.4261 10.1331 10.0703 9.57224 10.7839 8.81603C12.1352 7.38416 13.7426 5.24389 14.8885 2.33153L21.8607 14.4077C18.7654 13.9435 16.108 14.2653 14.1923 14.7194C13.1806 14.9593 12.3727 15.2367 11.812 15.4571C11.8048 15.46 11.7976 15.4628 11.7905 15.4656L8.93679 10.5229ZM11.0066 18.1078L9.75058 18.833L12.0108 21.105L12.3459 20.4276L11.0066 18.1078Z"
                    data-klear360-component="svg-path"
                    fill="hsla(0, 0%, 100%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c19 c20"
          data-klear360-component="avatar"
        >
          <div
            class="c21"
            data-klear360-component="base-box"
          >
            <div
              class="c22"
              color="neutral"
            >
              <div
                class="c23"
                data-klear360-component="base-box"
              >
                <p
                  class="c24"
                  data-klear360-component="text"
                  letter-spacing="50"
                >
                  MC
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
